나뭇가지 변경 및 멀티 싱글 오브젝트 크기조절

--- a/SFML Template/SFML Template.vcxproj
+++ b/SFML Template/SFML Template.vcxproj
@@ -196,7 +196,10 @@
     <ClInclude Include="Framework\SpriteGo.h" />
     <ClInclude Include="Framework\stdafx.h" />
     <ClInclude Include="Framework\TextGo.h" />
+    <ClInclude Include="SceneSelect.h" />
+    <ClInclude Include="SceneTitle.h" />
     <ClInclude Include="SelectPlate.h" />
+    <ClInclude Include="SelectStage.h" />
     <ClInclude Include="SpriteButton.h" />
     <ClInclude Include="Tree.h" />
     <ClInclude Include="UiScore.h" />
